[gd_scene load_steps=6 format=2]

[ext_resource path="res://road_tiles.tres" type="TileSet" id=1]
[ext_resource path="res://scripts/Maze.gd" type="Script" id=2]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]

[node name="Maze" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( -172.984, 328.544 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 699, 594 )
current = true
zoom = Vector2( 6, 6 )
script = ExtResource( 4 )

[node name="MovementTween" type="Tween" parent="Camera2D"]

[node name="ZoomTween" type="Tween" parent="Camera2D"]

[node name="BounceTween" type="Tween" parent="Camera2D"]
repeat = true
playback/repeat = true

[node name="TileMap" type="TileMap" parent="."]
pause_mode = 2
tile_set = ExtResource( 1 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
__meta__ = {
"_edit_lock_": true
}
